// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mjml-bar-chart mjml markup should render the bar chart 1`] = `
"<!doctype html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
  <head>
    <title></title>
    <!--[if !mso]><!-->
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <!--<![endif]-->
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style type="text/css">
      #outlook a { padding:0; }
      body { margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%; }
      table, td { border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; }
      img { border:0;height:auto;line-height:100%; outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; }
      p { display:block;margin:13px 0; }
    </style>
    <!--[if mso]>
    <noscript>
    <xml>
    <o:OfficeDocumentSettings>
      <o:AllowPNG/>
      <o:PixelsPerInch>96</o:PixelsPerInch>
    </o:OfficeDocumentSettings>
    </xml>
    </noscript>
    <![endif]-->
    <!--[if lte mso 11]>
    <style type="text/css">
      .mj-outlook-group-fix { width:100% !important; }
    </style>
    <![endif]-->
    
    
    <style type="text/css">
      @media only screen and (min-width:480px) {
        .mj-column-per-100 { width:100% !important; max-width: 100%; }
      }
    </style>
    <style media="screen and (min-width:480px)">
      .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
    </style>
    
  
    <style type="text/css">
    
    
    </style>
    <style type="text/css">
    
    </style>
    
  </head>
  <body style="word-spacing:normal;">
    
    
      <div
         style=""
      >
        
      
      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
    
      
      <div  style="margin:0px auto;max-width:600px;">
        
        <table
           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
        >
          <tbody>
            <tr>
              <td
                 style="direction:ltr;font-size:0px;padding:20px 0;text-align:center;"
              >
                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
            
      <div
         class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
      >
        
      <table
         border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%"
      >
        <tbody>
          
              <tr>
                <td
                   style="font-size:0px;word-break:break-word;"
                >
                  <table class="mjmlBarChart" style="border-collapse:collapse;margin:0 auto;"><tr><td style="padding:0;vertical-align:top;"><table style="border-collapse:collapse;"><tr><td style="firstStep">66</td></tr>
<tr><td style="otherStep">49</td></tr>
<tr><td style="otherStep">33</td></tr>
<tr><td style="otherStep">16</td></tr>
<tr><td style="otherStep">0</td></tr></table></td>
<td style="padding:0;"><table style="border-collapse:collapse;"><tr><td style="padding:0"><table style="width:100%;border-collapse:collapse;"><tr><td style="padding:0;height:40px;font-weight:bold;text-align:center;font-size:20px;">Sum of Requests by Department</td></tr></table></td></tr>
<tr><td style="padding:0;"><table style="border-collapse:collapse;border-left:2px solid d4d4d4;border-bottom:2px solid d4d4d4;"><tr><td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:116px;">33</td></tr>
<tr><td style="padding:0;height:100px;background-color:#ffe5ec;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:174px;">14</td></tr>
<tr><td style="padding:0;height:42px;background-color:#ffb3c6;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:134px;">27</td></tr>
<tr><td style="padding:0;height:82px;background-color:#fb6f92;"></td></tr></table></td>
<td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:161px;">18</td></tr>
<tr><td style="padding:0;height:55px;background-color:#ffe5ec;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:16px;">66</td></tr>
<tr><td style="padding:0;height:200px;background-color:#ffb3c6;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:89px;">42</td></tr>
<tr><td style="padding:0;height:127px;background-color:#fb6f92;"></td></tr></table></td>
<td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:195px;">7</td></tr>
<tr><td style="padding:0;height:21px;background-color:#ffe5ec;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:171px;">15</td></tr>
<tr><td style="padding:0;height:45px;background-color:#ffb3c6;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:152px;">21</td></tr>
<tr><td style="padding:0;height:64px;background-color:#fb6f92;"></td></tr></table></td>
<td style="padding:0;min-width:30px;max-width:30px;"></td></tr></table></td></tr>
<tr><td style="padding:0;"><table style="border-collapse:collapse;border-left:2px solid transparent;"><tr><td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="height:30px;padding:0;font-size:14px;text-align:center;overflow:hidden;min-width:90px;max-width:90px;">January</td>
<td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="height:30px;padding:0;font-size:14px;text-align:center;overflow:hidden;min-width:90px;max-width:90px;">February</td>
<td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="height:30px;padding:0;font-size:14px;text-align:center;overflow:hidden;min-width:90px;max-width:90px;">March</td>
<td style="padding:0;min-width:30px;max-width:30px;"></td></tr></table></td></tr>
<tr><td style="padding:0;"><table style="border-collapse:collapse;width:100%;"><tr><td style="padding:0;height:10px;"></td></tr>
<tr><td style="padding:0;"><p style="margin:0;padding:0;max-width:392px;line-height:20px;text-align:center;"><span style="padding:0 10px;height:20px;font-size:14px;border-left:30px solid #ffe5ec;">support</span>
<span style="padding:0 10px;height:20px;font-size:14px;border-left:30px solid #ffb3c6;">sales</span>
<span style="padding:0 10px;height:20px;font-size:14px;border-left:30px solid #fb6f92;">tech</span></p></td></tr></table></td></tr></table></td></tr></table>
                </td>
              </tr>
            
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    
      
      <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
      </div>
    
  </body>
</html>
  "
`;

exports[`mjml-bar-chart render should render the barChart as HTML 1`] = `
"<table class="mjmlBarChart" style="border-collapse:collapse;margin:0 auto;"><tr><td style="padding:0;vertical-align:top;"><table style="border-collapse:collapse;"><tr><td style="firstStep">66</td></tr>
<tr><td style="otherStep">49</td></tr>
<tr><td style="otherStep">33</td></tr>
<tr><td style="otherStep">16</td></tr>
<tr><td style="otherStep">0</td></tr></table></td>
<td style="padding:0;"><table style="border-collapse:collapse;"><tr><td style="padding:0;"><table style="border-collapse:collapse;border-left:2px solid d4d4d4;border-bottom:2px solid d4d4d4;"><tr><td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:116px;">33</td></tr>
<tr><td style="padding:0;height:100px;background-color:#ffe5ec;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:174px;">14</td></tr>
<tr><td style="padding:0;height:42px;background-color:#ffb3c6;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:134px;">27</td></tr>
<tr><td style="padding:0;height:82px;background-color:#fb6f92;"></td></tr></table></td>
<td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:161px;">18</td></tr>
<tr><td style="padding:0;height:55px;background-color:#ffe5ec;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:16px;">66</td></tr>
<tr><td style="padding:0;height:200px;background-color:#ffb3c6;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:89px;">42</td></tr>
<tr><td style="padding:0;height:127px;background-color:#fb6f92;"></td></tr></table></td>
<td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:195px;">7</td></tr>
<tr><td style="padding:0;height:21px;background-color:#ffe5ec;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:171px;">15</td></tr>
<tr><td style="padding:0;height:45px;background-color:#ffb3c6;"></td></tr></table></td>
<td style="padding:0"><table style="padding:0;min-width:30px;max-width:30px;"><tr><td style="padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:152px;">21</td></tr>
<tr><td style="padding:0;height:64px;background-color:#fb6f92;"></td></tr></table></td>
<td style="padding:0;min-width:30px;max-width:30px;"></td></tr></table></td></tr>
<tr><td style="padding:0;"><table style="border-collapse:collapse;border-left:2px solid transparent;"><tr><td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="height:30px;padding:0;font-size:14px;text-align:center;overflow:hidden;min-width:90px;max-width:90px;">January</td>
<td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="height:30px;padding:0;font-size:14px;text-align:center;overflow:hidden;min-width:90px;max-width:90px;">February</td>
<td style="padding:0;min-width:30px;max-width:30px;"></td>
<td style="height:30px;padding:0;font-size:14px;text-align:center;overflow:hidden;min-width:90px;max-width:90px;">March</td>
<td style="padding:0;min-width:30px;max-width:30px;"></td></tr></table></td></tr>
<tr><td style="padding:0;"><table style="border-collapse:collapse;width:100%;"><tr><td style="padding:0;height:10px;"></td></tr>
<tr><td style="padding:0;"><p style="margin:0;padding:0;max-width:392px;line-height:20px;text-align:center;"><span style="padding:0 10px;height:20px;font-size:14px;border-left:30px solid #ffe5ec;">support</span>
<span style="padding:0 10px;height:20px;font-size:14px;border-left:30px solid #ffb3c6;">sales</span>
<span style="padding:0 10px;height:20px;font-size:14px;border-left:30px solid #fb6f92;">tech</span></p></td></tr></table></td></tr></table></td></tr></table>"
`;

exports[`mjml-bar-chart renderJSON should render the barChart as JSON 1`] = `
{
  "attributes": {
    "class": "mjmlBarChart",
    "style": "border-collapse:collapse;margin:0 auto;",
  },
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "attributes": {
            "style": "padding:0;vertical-align:top;",
          },
          "children": [
            {
              "attributes": {
                "style": "border-collapse:collapse;",
              },
              "children": [
                {
                  "attributes": {},
                  "children": [
                    {
                      "attributes": {
                        "style": "firstStep",
                      },
                      "content": "66",
                      "tagName": "td",
                    },
                  ],
                  "tagName": "tr",
                },
                {
                  "attributes": {},
                  "children": [
                    {
                      "attributes": {
                        "style": "otherStep",
                      },
                      "content": "49",
                      "tagName": "td",
                    },
                  ],
                  "tagName": "tr",
                },
                {
                  "attributes": {},
                  "children": [
                    {
                      "attributes": {
                        "style": "otherStep",
                      },
                      "content": "33",
                      "tagName": "td",
                    },
                  ],
                  "tagName": "tr",
                },
                {
                  "attributes": {},
                  "children": [
                    {
                      "attributes": {
                        "style": "otherStep",
                      },
                      "content": "16",
                      "tagName": "td",
                    },
                  ],
                  "tagName": "tr",
                },
                {
                  "attributes": {},
                  "children": [
                    {
                      "attributes": {
                        "style": "otherStep",
                      },
                      "content": "0",
                      "tagName": "td",
                    },
                  ],
                  "tagName": "tr",
                },
              ],
              "tagName": "table",
            },
          ],
          "tagName": "td",
        },
        {
          "attributes": {
            "style": "padding:0;",
          },
          "children": [
            {
              "attributes": {
                "style": "border-collapse:collapse;",
              },
              "children": [
                {
                  "attributes": {},
                  "children": [
                    {
                      "attributes": {
                        "style": "padding:0;",
                      },
                      "children": [
                        {
                          "attributes": {
                            "style": "border-collapse:collapse;border-left:2px solid d4d4d4;border-bottom:2px solid d4d4d4;",
                          },
                          "children": [
                            {
                              "attributes": {},
                              "children": [
                                {
                                  "attributes": {
                                    "style": "padding:0;min-width:30px;max-width:30px;",
                                  },
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "padding:0;min-width:30px;max-width:30px;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:116px;",
                                              },
                                              "content": "33",
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;height:100px;background-color:#ffe5ec;",
                                              },
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                      ],
                                      "tagName": "table",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "padding:0;min-width:30px;max-width:30px;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:174px;",
                                              },
                                              "content": "14",
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;height:42px;background-color:#ffb3c6;",
                                              },
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                      ],
                                      "tagName": "table",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "padding:0;min-width:30px;max-width:30px;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:134px;",
                                              },
                                              "content": "27",
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;height:82px;background-color:#fb6f92;",
                                              },
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                      ],
                                      "tagName": "table",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0;min-width:30px;max-width:30px;",
                                  },
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "padding:0;min-width:30px;max-width:30px;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:161px;",
                                              },
                                              "content": "18",
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;height:55px;background-color:#ffe5ec;",
                                              },
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                      ],
                                      "tagName": "table",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "padding:0;min-width:30px;max-width:30px;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:16px;",
                                              },
                                              "content": "66",
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;height:200px;background-color:#ffb3c6;",
                                              },
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                      ],
                                      "tagName": "table",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "padding:0;min-width:30px;max-width:30px;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:89px;",
                                              },
                                              "content": "42",
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;height:127px;background-color:#fb6f92;",
                                              },
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                      ],
                                      "tagName": "table",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0;min-width:30px;max-width:30px;",
                                  },
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "padding:0;min-width:30px;max-width:30px;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:195px;",
                                              },
                                              "content": "7",
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;height:21px;background-color:#ffe5ec;",
                                              },
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                      ],
                                      "tagName": "table",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "padding:0;min-width:30px;max-width:30px;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:171px;",
                                              },
                                              "content": "15",
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;height:45px;background-color:#ffb3c6;",
                                              },
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                      ],
                                      "tagName": "table",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "padding:0;min-width:30px;max-width:30px;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;font-size:12px;vertical-align:bottom;text-align:center;line-height:16px;height:152px;",
                                              },
                                              "content": "21",
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                        {
                                          "attributes": {},
                                          "children": [
                                            {
                                              "attributes": {
                                                "style": "padding:0;height:64px;background-color:#fb6f92;",
                                              },
                                              "tagName": "td",
                                            },
                                          ],
                                          "tagName": "tr",
                                        },
                                      ],
                                      "tagName": "table",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0;min-width:30px;max-width:30px;",
                                  },
                                  "tagName": "td",
                                },
                              ],
                              "tagName": "tr",
                            },
                          ],
                          "tagName": "table",
                        },
                      ],
                      "tagName": "td",
                    },
                  ],
                  "tagName": "tr",
                },
                {
                  "attributes": {},
                  "children": [
                    {
                      "attributes": {
                        "style": "padding:0;",
                      },
                      "children": [
                        {
                          "attributes": {
                            "style": "border-collapse:collapse;border-left:2px solid transparent;",
                          },
                          "children": [
                            {
                              "attributes": {},
                              "children": [
                                {
                                  "attributes": {
                                    "style": "padding:0;min-width:30px;max-width:30px;",
                                  },
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "height:30px;padding:0;font-size:14px;text-align:center;overflow:hidden;min-width:90px;max-width:90px;",
                                  },
                                  "content": "January",
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0;min-width:30px;max-width:30px;",
                                  },
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "height:30px;padding:0;font-size:14px;text-align:center;overflow:hidden;min-width:90px;max-width:90px;",
                                  },
                                  "content": "February",
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0;min-width:30px;max-width:30px;",
                                  },
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "height:30px;padding:0;font-size:14px;text-align:center;overflow:hidden;min-width:90px;max-width:90px;",
                                  },
                                  "content": "March",
                                  "tagName": "td",
                                },
                                {
                                  "attributes": {
                                    "style": "padding:0;min-width:30px;max-width:30px;",
                                  },
                                  "tagName": "td",
                                },
                              ],
                              "tagName": "tr",
                            },
                          ],
                          "tagName": "table",
                        },
                      ],
                      "tagName": "td",
                    },
                  ],
                  "tagName": "tr",
                },
                {
                  "attributes": {},
                  "children": [
                    {
                      "attributes": {
                        "style": "padding:0;",
                      },
                      "children": [
                        {
                          "attributes": {
                            "style": "border-collapse:collapse;width:100%;",
                          },
                          "children": [
                            {
                              "attributes": {},
                              "children": [
                                {
                                  "attributes": {
                                    "style": "padding:0;height:10px;",
                                  },
                                  "tagName": "td",
                                },
                              ],
                              "tagName": "tr",
                            },
                            {
                              "attributes": {},
                              "children": [
                                {
                                  "attributes": {
                                    "style": "padding:0;",
                                  },
                                  "children": [
                                    {
                                      "attributes": {
                                        "style": "margin:0;padding:0;max-width:392px;line-height:20px;text-align:center;",
                                      },
                                      "children": [
                                        {
                                          "attributes": {
                                            "style": "padding:0 10px;height:20px;font-size:14px;border-left:30px solid #ffe5ec;",
                                          },
                                          "content": "support",
                                          "tagName": "span",
                                        },
                                        {
                                          "attributes": {
                                            "style": "padding:0 10px;height:20px;font-size:14px;border-left:30px solid #ffb3c6;",
                                          },
                                          "content": "sales",
                                          "tagName": "span",
                                        },
                                        {
                                          "attributes": {
                                            "style": "padding:0 10px;height:20px;font-size:14px;border-left:30px solid #fb6f92;",
                                          },
                                          "content": "tech",
                                          "tagName": "span",
                                        },
                                      ],
                                      "tagName": "p",
                                    },
                                  ],
                                  "tagName": "td",
                                },
                              ],
                              "tagName": "tr",
                            },
                          ],
                          "tagName": "table",
                        },
                      ],
                      "tagName": "td",
                    },
                  ],
                  "tagName": "tr",
                },
              ],
              "tagName": "table",
            },
          ],
          "tagName": "td",
        },
      ],
      "tagName": "tr",
    },
  ],
  "tagName": "table",
}
`;
